feat: setup appium mobile web framework and implement MOB-01
- Resolve Selenium 4.x and Appium 9.x dependency conflicts in pom.xml
- Implement MobileBaseTest with automated Chromedriver (v134) management
- Add MOB-01 mobile web test case to testcases.md
- Create MobileWebBookingTest using robust XPath for responsive UI